--- a/src/Core/NarfuPresentations.Core.Application/Application.csproj
+++ b/src/Core/NarfuPresentations.Core.Application/Application.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<BaseOutputPath>D:\src\repos\NarfuPresentations\build</BaseOutputPath>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<BaseOutputPath>D:\src\repos\NarfuPresentations\build</BaseOutputPath>
+		<RootNamespace>NarfuPresentations.Core.Application</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
