--- a/src/Core/NarfuPresentations.Core.Infrastructure/Infrastructure.csproj
+++ b/src/Core/NarfuPresentations.Core.Infrastructure/Infrastructure.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<BaseOutputPath>D:\src\repos\NarfuPresentations\build</BaseOutputPath>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<BaseOutputPath>D:\src\repos\NarfuPresentations\build</BaseOutputPath>
+		<RootNamespace>NarfuPresentations.Core.Infrastructure</RootNamespace>
 	</PropertyGroup>
 
 </Project>
