--- a/src/Host/NarfuPresentations.Host.API/API.csproj
+++ b/src/Host/NarfuPresentations.Host.API/API.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
+		<RootNamespace>NarfuPresentations.Host.API</RootNamespace>
 		<BaseOutputPath>D:\src\repos\NarfuPresentations\build</BaseOutputPath>
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
