--- a/src/Shared/NarfuPresentations.API.Client/API.Client.csproj
+++ b/src/Shared/NarfuPresentations.API.Client/API.Client.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<BaseOutputPath>D:\src\repos\NarfuPresentations\build</BaseOutputPath>
+		<RootNamespace>NarfuPresentations.Shared.API.Client</RootNamespace>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
