--- a/src/Shared/NarfuPresentations.Shared.Contracts/Contracts.csproj
+++ b/src/Shared/NarfuPresentations.Shared.Contracts/Contracts.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<BaseOutputPath>D:\src\repos\NarfuPresentations\build</BaseOutputPath>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<RootNamespace>NarfuPresentations.Shared.Contracts</RootNamespace>
+	</PropertyGroup>
 
 </Project>
