--- a/src/Shared/NarfuPresentations.Shared.Domain/Domain.csproj
+++ b/src/Shared/NarfuPresentations.Shared.Domain/Domain.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<BaseOutputPath>D:\src\repos\NarfuPresentations\build</BaseOutputPath>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<RootNamespace>NarfuPresentations.Shared.Domain</RootNamespace>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Folder Include="Entities\" />
+	</ItemGroup>
 
 </Project>
