--- a/src/Presentation/NarfuPresentations.Presentation.MAUI/MAUI.csproj
+++ b/src/Presentation/NarfuPresentations.Presentation.MAUI/MAUI.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-android;</TargetFrameworks>
+		<TargetFrameworks>;net7.0-android</TargetFrameworks>
         <!--;net6.0-ios;net6.0-maccatalyst-->
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041.0</TargetFrameworks>
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.22621.0</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<RootNamespace>NarfuPresentations.Presentation.MAUI</RootNamespace>
 		<UseMaui>true</UseMaui>
@@ -33,12 +33,12 @@
 	</PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0" />
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0" />
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.6" />
+        <PackageReference Include="CommunityToolkit.Maui" Version="3.0.0" />
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="2.0.0" />
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.0" />
         <PackageReference Include="Refit" Version="6.3.2" />
         <PackageReference Include="Refit.HttpClientFactory" Version="6.3.2" />
         <PackageReference Include="System.ObjectModel" Version="4.3.0" />
